fix: now the store use reduxjs/toolkit

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "env": {
         "browser": true,
-        "es2021": true
+        "es2021": true,
+        "jest": true
     },
     "extends": [
         "plugin:react/recommended",
@@ -38,9 +39,11 @@
         "no-underscore-dangle": 0,
         "no-unused-vars": 1,
         "default-param-last": 0,
-        "import/prefer-default-export": 1,
+        "import/prefer-default-export": 0,
         "react/jsx-no-useless-fragment": 0,
         "react/require-default-props": 0,
-        "react/self-closing-comp": 0
+        "react/self-closing-comp": 0,
+        "import/no-extraneous-dependencies": 0,
+        "spaced-comment": 0
     }
 }
