--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix . --ext .ts,.tsx",
     "prettier": "prettier . --write",
-    "prettier:check": "prettier . --check"
+    "prettier:check": "prettier . --check",
+    "husky-install": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -60,6 +61,8 @@
     ]
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -80,7 +83,10 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.6.2",
-    "prettier-eslint": "^15.0.1"
+    "prettier-eslint": "^15.0.1",
+    "tsc-files": "^1.1.3"
   }
 }
