--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "styled-components": "^5.3.5",
     "toastr": "^2.1.4",
     "typescript": "^4.6.4",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
